compiler/testData/diagnostics/tests/properties/localPropertyExtensions.fir.kt
// SKIP_TXT

fun test() {
    konst <!LOCAL_EXTENSION_PROPERTY!>String<!>.count = 42
}
